k8s/development_2/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: synapse-dev-2
  namespace: beacon-node
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - matrix-1.dev.gke.papers.tech
      secretName: synapse-dev-2-tls
  rules:
    - host: matrix-2.dev.gke.papers.tech
      http:
        paths:
          - backend:
              serviceName: synapse-dev-2-service
              servicePort: 8008
